--- a/style.css
+++ b/style.css
@@ -11,8 +11,10 @@ body {
 }
 
 .quiz-card {
-    width: 30rem;
+    width: 500px;
 }
+
+
 
 .question-footer {
     border-top: 1px solid rgb(0, 0, 0, 0.4);
