--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: #fefaef !important;
+    
 }
 
 .container {
@@ -11,10 +12,8 @@ body {
 }
 
 .quiz-card {
-    width: 500px;
+    width: 30rem;
 }
-
-
 
 .question-footer {
     border-top: 1px solid rgb(0, 0, 0, 0.4);
@@ -24,4 +23,26 @@ body {
     padding-top: 12px;
 }
 
+.quiz-answer-card:hover {
+    cursor: pointer;
+    background-color: rgb(0, 0, 0, 0.05);
+}
+
+.bg-success, .bg-danger {
+    color: white;
+}
+
+.widht-100 {
+    width: 100%;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.button-row {
+    display: flex;
+    justify-content: center;
+    margin-top: 24px;
+}
 
